--- a/app/globals.scss
+++ b/app/globals.scss
@@ -16,12 +16,13 @@
 }
 
 .clip-left {
-  clip-path: polygon(0 0, 100% 0, 99% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
 }
 
 .clip-right {
-  clip-path: polygon(1% 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(15% 0, 100% 0, 100% 100%, 0 100%);
 }
+
 
 .react-datepicker__day--selected {
   background-color: #FFCC29 !important;
